# prd-reviewer-cli

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh
docs/: ARCHITECTURE.md  PRODUCT_OVERVIEW.md  README.md  SAMPLE_REVIEW.md
src/: config.rs  main.rs
src/commands/: figma.rs  init.rs  jira.rs  mod.rs  prd.rs  update.rs
src/figma/: client.rs  config.rs  error.rs  mod.rs  output.rs  url.rs
src/figma/api/: comments.rs  files.rs  images.rs  mod.rs  teams.rs  variables.rs
src/figma/models/: comment.rs  component.rs  export.rs  file.rs  mod.rs  team.rs  variable.rs
src/jira/: client.rs  config.rs  error.rs  mod.rs
src/jira/api/: jira_api.rs  mod.rs  wiki_api.rs
src/jira/confluence/: html.rs  images.rs  jira_wiki.rs  mod.rs
src/jira/models/: jira.rs  mod.rs  wiki.rs
src/templates/: mod.rs
tests/: cli_integration.rs
